--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
-    <video src="./resources/videos/excursion.mp4" autoplay>
+    <p><video src="./resources/videos/excursion.mp4" autoplay="" loop="">
       Video not supported
-    </video>
+    </video></p>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="./resources/images/camp.jpg" alt="tent"></p>
     <p><img src="./resources/images/phone.png" alt="phone"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
-
+    
   </body>
 </html>
