--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p><img src="./resources/images/phone.png" alt="phone"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
-    
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
